# local-agent-runner

./: README.md  pyproject.toml
examples/: research_and_report.yaml  summarize_files.yaml
local_agent_runner/: __init__.py  agent.py  cli.py  config.py  logger.py  sandbox.py  tools.py
tests/: __init__.py  test_agent.py  test_config.py  test_logger.py  test_sandbox.py  test_tools.py
