[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "local_agent_runner"
version = "0.1.0"
description = "A minimal CLI harness for defining and executing multi-step agentic workflows powered by a local LLM via Ollama."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "local_agent_runner contributors" }
]
keywords = ["llm", "agent", "ollama", "cli", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
local-agent-runner = "local_agent_runner.cli:main"

[project.urls]
Homepage = "https://github.com/example/local_agent_runner"
Repository = "https://github.com/example/local_agent_runner"
Issues = "https://github.com/example/local_agent_runner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_agent_runner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.setuptools.package-data]
"local_agent_runner" = ["py.typed"]
